[Qt][WK1] MemoryCache is not cleaned by default https://bugs.webkit.org/show_bug.cgi?id=111443

Reviewed by Jocelyn Turcotte.

Enable deletion of dead resources in the memory cache as long as the MemoryCache is enabled.

This can be disabled or tuned using the dynamic property  "_q_deadDecodedDataDeletionInterval".
The default is set to match that of most other ports and WK2 with cache in WebBrowsing mode.

* Api/qwebsettings.cpp:
(QWebSettings::setObjectCacheCapacities):
* WebCoreSupport/InitWebCoreQt.cpp:
(WebCore::initializeWebCoreQt):

Canonical link: https://commits.webkit.org/133450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148951 268f45cc-cd09-0410-ab3c-d52691b4dbfc